--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        
+      
     </header>
 
     <main>
@@ -18,10 +18,11 @@
 
     <footer>
         <div class="tarjeta">
-            <img class="imagen" src="cara.png" alt="img">
-            <div class="contenido">
-              <p>En que te puedo ayudar?</p>
-              <div class="giratarjeta">Dani Ferrer Robles</div>
+            <div class="colocarTarjeta">
+                <img class="imagen" src="cara.png" alt="img">
+                <div>
+                    <p class="texto">Dani Ferrer Robles</p>
+                </div>                
             </div>
         </div>
     </footer>
